--- a/TikTok_Influencer_Classification_J_Laurel_&_F_Aguirre_(2021).ipynb
+++ b/TikTok_Influencer_Classification_J_Laurel_&_F_Aguirre_(2021).ipynb
@@ -37,9 +37,10 @@
         "However, several limitations prevent local marketers from fully benefiting from the influence of TikTokers.\n",
         "<br> \n",
         "\n",
-        "1.   There are <b>limited platforms</b> which track the performance of TikTok influencers in the Philippines. To the knowledge of our team, the only websites which provide data on local TikTokers are Influence Grid and Hypetrace.\n",
-        "2.   The aforementioned websites merely classify influencers based on metrics such as followers, likes, views, and average engagement. They do not provide insight into <b>other characteristics of trending videos</b>, such as the optimal publishing schedule, music, text, and visual elements used by influencers.\n",
+        "1.   There are <b>limited platforms</b> which track the performance of TikTok influencers in the Philippines. To the knowledge of our team, the only websites which provide data on local TikTokers are Influence Grid and Hypetrace. <br>\n",
+        "2.   The aforementioned websites merely classify influencers based on metrics such as followers, likes, views, and average engagement. They do not provide insight into <b>other characteristics of trending videos</b>, such as the optimal publishing schedule, music, text, and visual elements used by influencers. <br>\n",
         "3.   By relying on the influencer rankings published by existing platforms, which are largely based on past engagement rates, marketers may be <b>late in identifying up-and-coming influencers</b> who may have greater growth potential than top influencers who may have already reached the peaks of their careers.\n",
+        "<br>\n",
         "\n",
         "So, how can local marketers better leverage TikTokers’ huge online influence to drive the growth of their brands?\n",
         "\n",
@@ -90,18 +91,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "atNlAayC00o-",
-        "outputId": "441ef4bf-98c4-46dc-88d9-2b94c2e20622"
+        "outputId": "490c21b9-9fef-4868-ac2d-62b200e8d322"
       },
       "source": [
+        "# Mount Google Drive that contains this notebook\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -113,13 +115,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "1Ab2tH3g0n4x",
-        "outputId": "1ef2d380-73b4-40b6-8f08-156c3d13fd13"
+        "id": "xgkeMP7y4YtY",
+        "outputId": "0567c81b-31bb-41c8-d8ad-82a12d76a56d"
       },
       "source": [
         "cd '/content/drive/My Drive/Colab Notebooks/'"
       ],
-      "execution_count": 2,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,21 +139,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mTrZ5wJQ1wKC",
-        "outputId": "0c562861-979a-4d2f-b21a-0522a75538ee"
+        "outputId": "b70b3e40-46b2-48f1-ad9f-742efa1c4069"
       },
       "source": [
+        "# Clone the git file from Github\n",
         "!git clone https://github.com/josephlaurel/TikTokInfluencerClassifier.git"
       ],
-      "execution_count": 5,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Cloning into 'TikTokInfluencerClassifier'...\n",
-            "remote: Enumerating objects: 3, done.\u001b[K\n",
-            "remote: Counting objects: 100% (3/3), done.\u001b[K\n",
-            "remote: Total 3 (delta 0), reused 0 (delta 0), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (3/3), done.\n"
+            "fatal: destination path 'TikTokInfluencerClassifier' already exists and is not an empty directory.\n"
           ],
           "name": "stdout"
         }
